appId: com.tomasmach.pauzer
---
- launchApp:
    clearState: true
- tapOn:
    id: "add-preset-tile"
- tapOn:
    id: "add-preset-minutes-plus"
- tapOn:
    id: "add-preset-save"
- assertVisible:
    id: "preset-150"
- longPressOn:
    id: "preset-150"
- tapOn:
    id: "delete-preset-confirm"
- assertNotVisible:
    id: "preset-150"
